welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: ')' expected but ';' found.
  nbBiscuit = 0;
               ^Poucet:4: error: 'while' expected but 'for' found.
  for (pas <- 1 to 5) {if (estSurBiscuit()) {nbBiscuit() = nbBiscuit +1} ; avance() ; } ;
  ^Poucet:4: error: '(' expected but ';' found.
  for (pas <- 1 to 5) {if (estSurBiscuit()) {nbBiscuit() = nbBiscuit +1} ; avance() ; } ;
                                                                                        ^Poucet:6: error: illegal start of statement
)
^